--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
 <li><a href="http://waikeung.info/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
-<li><a href="http://www.kanxav.ml/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
+<li><a href="http://www.kanxav.ga/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇涩社区</a></li>
 <li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayabeer.com/index.php" target="_blank">玛雅网</a></li>
