--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <li><a href="http://www.kanxav.ga/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇涩社区</a></li>
 <li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
-<li><a href="http://www.mayabeer.com/index.php" target="_blank">玛雅网</a></li>
+<li><a href="http://www.mayarun.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://vip.taoyin365.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
@@ -116,7 +116,7 @@
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
-<li><a href="http://www.mimibeer.com/" target="_blank">咪咪爱</a></li>
+<li><a href="http://www.mimixyz.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.naluone-gp.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
 <li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio66.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
@@ -148,9 +148,10 @@
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://m.ocoaoo.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://cc.jjjyyy.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://cc.umyp.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://m.ttqflc.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cc.vpdvl.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
+<li><a href="http://cc.uqsk.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -208,7 +209,6 @@
 <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
 <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
-<li><a href="http://www.qiqidh.com/" target="_blank">琪琪导航</a></li>
 <li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
 <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
 <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
@@ -312,7 +312,7 @@
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
 <li><a href="http://www.99ff1.com/" target="_blank">久久热视频</a></li>
-<li><a href="http://renxinglu365.com/" target="_blank">任性撸</a></li>
+<li><a href="http://www.rxl1024.com/" target="_blank">任性撸</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
@@ -324,6 +324,7 @@
 <li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
+<li><a href="https://www.92sihu.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="http://www.95gav.com/" target="_blank">91GAV</a></li>
@@ -445,7 +446,7 @@
 <li><a href="http://www.bigbreastarchive.com/" target="_blank">大奶图片</a></li>
 <li><a href="http://www.foxhq.com/" target="_blank">爆乳丰臀画廊</a></li>
 <li><a href="http://www.farangdingdong.com/" target="_blank">FarangDingDong</a></li>
-<li><a href="http://www.ltz4.info/?fromuid=273955" target="_blank">恋臀者</a></li>
+<li><a href="http://www.ltz5.info/?fromuid=273955" target="_blank">恋臀者</a></li>
 <li><a href="http://www.assdream.com/" target="_blank">Ass Dream</a></li>
 <li><a href="http://www.abigass.com/" target="_blank">ABigAss</a></li>
 <li><a href="http://www.siwaluntan.com/?fromuid=564142" target="_blank">丝袜论坛</a></li>
@@ -508,7 +509,7 @@
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.fou3.com/" target="_blank">爬花楼</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
-<li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
+<li><a href="http://204.152.220.30/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.weipaipapa.com/" target="_blank">微拍啪啪</a></li>
 <li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
@@ -524,7 +525,7 @@
 <li><a href="http://www.xyj2014.com/?fromuid=118049" target="_blank">西友记</a></li>
 <li><a href="http://192.161.172.132/?u=465979" target="_blank">买春堂</a></li>
 <li><a href="http://www.myhhg.com/?u=430488" target="_blank">红河谷</a></li>
-<li><a href="http://www.2ni.la/" target="_blank">恋恋影视</a></li>
+<li><a href="http://www.2ta.tv/" target="_blank">恋恋影视</a></li>
 <li><a href="https://chaturbate.com/" target="_blank">Chaturbate</a></li>
 <li><a href="http://www.tnaflixcams.com/" target="_blank">tnaflixcams</a></li>
 <li><a href="http://pinkcams.com/" target="_blank">Pink cams</a></li>
@@ -694,7 +695,6 @@
 <li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
 <li><a href="http://www.3515.pw/" target="_blank">爱心社</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
-<li><a href="http://www.bvfpei.com/" target="_blank">邪恶GIF</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://www.ixieegif.com/" target="_blank">哆乐动图</a></li>
 <li><a href="http://91.t9m.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
@@ -710,6 +710,7 @@
 <li><a href="http://jigadori.fkoji.com/" target="_blank">Twitter美女</a></li>
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
 <li><a href="http://www.pornpicc.com/" target="_blank">妹子图控</a></li>
+<li><a href="http://www.baituce.com/" target="_blank">百图册</a></li>
 <li><a href="http://www.sousi8.cc/" target="_blank">搜丝吧</a></li>
 <li><a href="http://www.guomo.link/?fromuid=130143" target="_blank">国模</a></li>
 <li><a href="http://www.17345.com/" target="_blank">三次元</a></li>
