--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
+<li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
@@ -469,15 +470,15 @@
 		<strong><a name="/8/">动漫ACG</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="https://bbs.holyo.org/?fromuid=3565" target="_blank">圣灵神域</a></li>
 <li><a href="http://www.blrgfz.com/" target="_blank">邪恶少女漫画</a></li>
 <li><a href="http://www.decask.com/" target="_blank">邪恶漫画吧</a></li>
 <li><a href="http://hentai-d.com/" target="_blank">Hentai-d</a></li>
 <li><a href="http://e-hentai.org/" target="_blank">E-Hentai</a></li>
 <li><a href="http://bbs.north-plus.net/" target="_blank">North Plus</a></li>
 <li><a href="http://www.xxshe.com/" target="_blank">和邪社</a></li>
-<li><a href="http://www.erojima2.com/" target="_blank">魁!!同人塾</a></li>
 <li><a href="http://www.177picxx.info/" target="_blank">177漫畫</a></li>
+<li><a href="https://bbs.holyo.org/?fromuid=3565" target="_blank">圣灵神域</a></li>
+<li><a href="http://www.hacg.la/wp/" target="_blank">琉璃神社</a></li>
 <li><a href="https://www.acg.tf/" target="_blank">绅士二次元</a></li>
 <li><a href="https://www.htai.me/" target="_blank">绅士图书馆</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
