--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
+<li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
-<li><a href="http://xinghao.ml/" target="_blank">性好论坛</a></li>
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
@@ -74,7 +74,6 @@
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
-<li><a href="http://fuli3758.com/" target="_blank">福利社小说</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
 <li><a href="http://www.papapa88.com/?fromuid=123" target="_blank">啪啪啪88</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
@@ -86,7 +85,6 @@
 <li><a href="http://waikeung.info/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://www.kanxav.ga/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
-<li><a href="http://www.qiseshequ.info/" target="_blank">奇涩社区</a></li>
 <li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayarun.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://vip.taoyin365.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
@@ -96,6 +94,7 @@
 <li><a href="http://bbs.airav.cc/forum.php?fromuid=130513" target="_blank">瘋AV</a></li>
 <li><a href="http://www.up01.cc/" target="_blank">UP01</a></li>
 <li><a href="http://www.spring4u.info/index.php" target="_blank">春满四合院</a></li>
+<li><a href="http://www.365doc.net/" target="_blank">H小说网</a></li>
 <li><a href="http://www.cool18.com/bbs4/" target="_blank">禁忌书屋</a></li>
 <li><a href="http://www.dushang99.info/" target="_blank">杜尚论坛</a></li>
 <li><a href="http://mtl6.xyz/" target="_blank">摩天轮社区</a></li>
@@ -126,6 +125,7 @@
 <li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">宅男福利网</a></li>
+<li><a href="http://serendang.us/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
 <li><a href="http://c-street.us/bbs/?fromuid=164277" target="_blank">华人街</a></li>
@@ -138,7 +138,7 @@
 <li><a href="http://ttlbbs.net/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://www.xav66.com/" target="_blank">XIAAV</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
-<li><a href="http://www.yxj163.com/?fromuid=416640" target="_blank">亿性家</a></li>
+<li><a href="http://yixingjiabbs.com/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
@@ -176,6 +176,7 @@
 <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
 <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
 <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
+<li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
@@ -479,6 +480,7 @@
 <li><a href="http://www.177picxx.info/" target="_blank">177漫畫</a></li>
 <li><a href="https://bbs.holyo.org/?fromuid=3565" target="_blank">圣灵神域</a></li>
 <li><a href="http://www.hacg.la/wp/" target="_blank">琉璃神社</a></li>
+<li><a href="http://18h.animezilla.com/" target="_blank">宅宅愛動漫</a></li>
 <li><a href="https://www.acg.tf/" target="_blank">绅士二次元</a></li>
 <li><a href="https://www.htai.me/" target="_blank">绅士图书馆</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
@@ -591,7 +593,7 @@
 		<ul>
 <li><a href="http://j12lib.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
-<li><a href="http://www.51shl.xyz/" target="_blank">色狐狸</a></li>
+<li><a href="http://www.51fls.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.141jav.com/" target="_blank">141jav</a></li>
 <li><a href="http://mo666.net/" target="_blank">Dioguitar23</a></li>
@@ -740,7 +742,7 @@
 		<ul>
 <li><a href="http://imgur.com/" target="_blank">Imgur</a></li>
 <li><a href="http://www.imagebam.com/" target="_blank">Imagebam</a></li>
-<li><a href="http://www.stooorage.com/" target="_blank">Stooorage</a></li>
+<li><a href="https://postimage.org/" target="_blank">Postimage</a></li>
 <li><a href="http://radikal.ru/" target="_blank">Radikal</a></li>
 <li><a href="http://imgbox.com/" target="_blank">Imgbox</a></li>
 <li><a href="http://www.photobucket.com/" target="_blank">Photobucket</a></li>
