--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
-<li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
+<li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
+<li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
@@ -236,7 +237,13 @@
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
+<li><a href="http://www.taoludy.com/" target="_blank">淘撸在线AV</a></li>
+<li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
+<li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
+<li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
+<li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
+<li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
@@ -247,11 +254,6 @@
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
-<li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
-<li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
-<li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
-<li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
-<li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -328,7 +330,7 @@
 <li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.92sihu.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
-<li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
+<li><a href="http://www.avtai.vip/" target="_blank">AvTai</a></li>
 <li><a href="http://www.95gav.com/" target="_blank">91GAV</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
