--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
+<li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
+<li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
-<li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
+<li><a href="http://www.70b1.com/?fromuid=16580" target="_blank">麒麟臂论坛</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
@@ -136,22 +138,21 @@
 <li><a href="http://www.youbbbs.co/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
-<li><a href="http://ttlbbs.net/?fromuid=3952405" target="_blank">桃太狼</a></li>
+<li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://www.xav66.com/" target="_blank">XIAAV</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
-<li><a href="http://yixingjiabbs.com/?fromuid=416640" target="_blank">亿性家</a></li>
+<li><a href="http://www.yixingjiabbs.com/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://taohuabt.org/?fromuid=70941" target="_blank">桃花族</a></li>
-<li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
-<li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
-<li><a href="http://m.ocoaoo.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
+<li><a href="http://cc.umpb.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
+<li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://cc.umyp.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://m.ttqflc.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
-<li><a href="http://cc.vpdvl.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
+<li><a href="http://m.ocoaoo.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cc.ukmz.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://cc.uqsk.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
