--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
@@ -437,9 +438,9 @@
 		<strong><a name="/7/">特色好站</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://www.bomeifl.com/" target="_blank">大波妹</a></li>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
 <li><a href="http://www.ivnext.vip/" target="_blank">少女写真论坛</a></li>
-<li><a href="http://www.bomeifl.com/" target="_blank">大波妹</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.ywba.net/" target="_blank">原味吧</a></li>
