--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://18board.com/forum/" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
-<li><a href="http://108.62.192.126/" target="_blank">PLUS28</a></li>
-<li><a href="http://www.3pforum.com/bbs/?fromuid=143829" target="_blank">3P论坛</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
 <li><a href="http://waikeung.info/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
@@ -99,6 +97,8 @@
 <li><a href="http://www.spring4u.info/index.php" target="_blank">春满四合院</a></li>
 <li><a href="http://www.365doc.net/" target="_blank">H小说网</a></li>
 <li><a href="http://www.cool18.com/bbs4/" target="_blank">禁忌书屋</a></li>
+<li><a href="http://www.aastory.xyz/" target="_blank">疯情书库</a></li>
+<li><a href="http://www.lt92.com/" target="_blank">龙腾小说网</a></li>
 <li><a href="http://www.dushang99.info/" target="_blank">杜尚论坛</a></li>
 <li><a href="http://mtl6.xyz/" target="_blank">摩天轮社区</a></li>
 <li><a href="http://6ppp6.club/" target="_blank">涩啪啪</a></li>
@@ -127,7 +127,7 @@
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
 <li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
-<li><a href="http://www.av0769.com/" target="_blank">宅男福利网</a></li>
+<li><a href="http://www.740547610.com/" target="_blank">宅男福利</a></li>
 <li><a href="http://serendang.us/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
@@ -317,7 +317,7 @@
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
-<li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
+<li><a href="http://www.koko5454.win/" target="_blank">东京热</a></li>
 <li><a href="http://www.99ff1.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl1024.com/" target="_blank">任性撸</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
@@ -600,6 +600,7 @@
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="http://www.51fls.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
+<li><a href="http://www.yaozy.com/" target="_blank">番号大全</a></li>
 <li><a href="http://www.141jav.com/" target="_blank">141jav</a></li>
 <li><a href="http://mo666.net/" target="_blank">Dioguitar23</a></li>
 <li><a href="http://javarchive.com/" target="_blank">JavArchive</a></li>
@@ -783,6 +784,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="https://btso.pw/search" target="_blank">BTSOW种子</a></li>
+<li><a href="http://clshe.com/" target="_blank">磁力社</a></li>
 <li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
 <li><a href="http://btkitty.bid/" target="_blank">BT KITTY</a></li>
 <li><a href="https://www.nyaa.se/" target="_blank">Nyaa</a></li>
