--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
 <li><a href="http://www.8858av.com/" target="_blank">小电影</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
+<li><a href="http://www.52x.club/" target="_blank">我爱插</a></li>
+<li><a href="http://www.91lu.club/" target="_blank">就要撸</a></li>
 <li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
