--- a/index.html
+++ b/index.html
@@ -237,10 +237,11 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
-<li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
+<li><a href="http://www.dushewang.top/" target="_blank">毒蛇AV影院</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
+<li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
@@ -336,7 +337,6 @@
 <li><a href="http://www.vod35.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.92sihu.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
-<li><a href="http://www.avtai.vip/" target="_blank">AvTai</a></li>
 <li><a href="http://www.95gav.com/" target="_blank">91GAV</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://caoporn.pink/" target="_blank">CaoPorn</a></li>
