--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
-<li><a href="http://www.70b1.com/?fromuid=16580" target="_blank">麒麟臂论坛</a></li>
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://www.70b1.com/?fromuid=16580" target="_blank">麒麟臂论坛</a></li>
 <li><a href="http://twhav.com/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
@@ -225,6 +225,7 @@
 <li><a href="http://www.muguadaohang.com/" target="_blank">木瓜导航</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
+<li><a href="http://www.av789.xyz/" target="_blank">av789导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
@@ -240,6 +241,7 @@
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
+<li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
@@ -254,8 +256,10 @@
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
+<li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
+<li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
@@ -265,6 +269,7 @@
 <li><a href="http://www.rraiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
+<li><a href="http://cao78.xyz/" target="_blank">操jb视频</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
