--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-<li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
+<li><a href="http://5genvpiao.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
+<li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li> 
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
