--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
+<li><a href="http://lu6vip.com/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
@@ -263,6 +264,7 @@
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
+<li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -273,6 +275,7 @@
 <li><a href="http://cao78.xyz/" target="_blank">操jb视频</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
+<li><a href="http://www.ppp166.com/" target="_blank">伦理片大全</a></li>
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
@@ -713,7 +716,8 @@
 <li><a href="http://www.3515.pw/" target="_blank">爱心社</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
-<li><a href="http://www.ixieegif.com/" target="_blank">哆乐动图</a></li>
+<li><a href="http://www.meinvtu.info/" target="_blank">美女图福利</a></li>
+<li><a href="http://www.ixieegif.com/" target="_blank">G爱F出处网</a></li>
 <li><a href="http://91.t9m.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
