--- a/index.html
+++ b/index.html
@@ -219,7 +219,6 @@
 <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
 <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
-<li><a href="http://www.1dh.info/" target="_blank">S站第一导航</a></li>
 <li><a href="http://www.jpmdh.info/" target="_blank">金瓶梅福利导航</a></li>
 <li><a href="http://91xfdh.com/" target="_blank">91性福导航</a></li>
 <li><a href="http://www.ds555.cc/" target="_blank">男人福利導航</a></li>
@@ -227,7 +226,6 @@
 <li><a href="http://www.muguadaohang.com/" target="_blank">木瓜导航</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
-<li><a href="http://www.av789.xyz/" target="_blank">av789导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
@@ -238,7 +236,6 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
 <li><a href="http://www.dushewang.top/" target="_blank">毒蛇AV影院</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
@@ -253,6 +250,7 @@
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
+<li><a href="http://m.dongliuvv.com/" target="_blank">东流AV影院</a></li>
 <li><a href="http://www.taoludy.com/" target="_blank">淘撸在线AV</a></li>
 <li><a href="http://www.xigua110.pw/" target="_blank">手机午夜大片</a></li>
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
@@ -280,6 +278,7 @@
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
 <li><a href="http://www.8858av.com/" target="_blank">小电影</a></li>
+<li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.52x.club/" target="_blank">我爱插</a></li>
@@ -323,7 +322,6 @@
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb66.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
-<li><a href="http://www.xxoo.tm/" target="_blank">男人本涩</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.7mav.net/" target="_blank">7M视频</a></li>
@@ -358,6 +356,11 @@
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
+<li><a href="http://www.lupian50.com/" target="_blank">撸片迷在线</a></li>
+<li><a href="http://c8117.com/" target="_blank">男人视频</a></li>
+<li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
+<li><a href="http://99rr11.com/" target="_blank">久久视频</a></li>
+<li><a href="http://www.yaoav7.com/" target="_blank">要AV高清视频</a></li>
 <li><a href="http://www.twav13.com/" target="_blank">AV中文</a></li>
 <li><a href="http://kuav.tv/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
@@ -564,7 +567,7 @@
 		<ul>
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
-<li><a href="http://10086.pw/?fromuid=1539" target="_blank">找福利网论坛</a></li>
+<li><a href="http://zfuli.wang/?fromuid=1539" target="_blank">找福利网论坛</a></li>
 <li><a href="http://www.wg438.com/" target="_blank">超碰论坛</a></li>
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
