--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!-- 首页 -->
 <html>
 <head>
-<meta charset="utf-8"/>
-<title>蓝色小导航 - 各大网站最新地址</title>
-<meta name="keywords" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
-<meta name="description" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
-<meta name="viewport" content="width=device-width"/>
+<meta charset="UTF-8">
+<title>蓝色小导航-福利导航-蓝色导航</title>
+<meta name="Description" content="蓝色小导航,打造完全绿色无毒无广告,收录全面更新及时的福利导航." />
+<meta name="keywords" content="福利导航,蓝色福利导航,蓝色导航,蓝福利导航,第一福利导航,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,夜趣图爱,夜趣资源,宅男网站大全,手机酷站,找福利,一键好去处">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body>
@@ -287,7 +287,7 @@
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.56avs.us/" target="_blank">沃流视频</a></li>
-<li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
+<li><a href="http://www.avzhao.cc/" target="_blank">找AV上</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
