--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <title>蓝色小导航-福利导航-蓝色导航</title>
 <meta name="Description" content="蓝色小导航,打造完全绿色无毒无广告,收录全面更新及时的福利导航." />
-<meta name="keywords" content="福利导航,蓝色福利导航,蓝色导航,蓝色小导航,蓝福利导航,第一福利导航,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,夜趣图爱,夜趣资源,宅男网站大全,手机酷站,找福利,一键好去处">
+<meta name="keywords" content="福利导航,蓝色福利导航,蓝色导航,蓝色小导航,福导航,蓝福利导航,第一福利导航,福利,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,你懂的资源,宅男网站大全,手机酷站,找福利,一键好去处">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
@@ -191,9 +191,11 @@
 <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
 <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
 <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
-<li><a href="http://www.pigutu.cc/" target="_blank">第一福利导航</a></li>
-<li><a href="http://www.chaxue.pw/" target="_blank">插穴福利导航</a></li>
+<li><a href="http://www.pigutu.pw/" target="_blank">第一福利导航</a></li>
+<li><a href="http://www.chaxuedh.pw/" target="_blank">插穴福利导航</a></li>
 <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
+<li><a href="http://www.meiniang.pw/" target="_blank">媚娘福利导航</a></li>
+<li><a href="http://www.1024fuli.pw/" target="_blank">1024福利导航</a></li>
 <li><a href="http://www.baihudh.info/" target="_blank">白虎福利导航</a></li>
 <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
@@ -243,6 +245,7 @@
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
+<li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
@@ -278,6 +281,7 @@
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
 <li><a href="http://www.8858av.com/" target="_blank">小电影</a></li>
+<li><a href="http://www.eeey123.com/" target="_blank">88微拍福利</a></li>
 <li><a href="http://www.yyy151.com/" target="_blank">光棍影院</a></li>
 <li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
