--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <title>蓝色小导航-福利导航-蓝色导航</title>
 <meta name="Description" content="蓝色小导航,打造完全绿色无毒无广告,收录全面更新及时的福利导航." />
-<meta name="keywords" content="福利导航,蓝色福利导航,蓝色导航,蓝色小导航,福导航,蓝福利导航,第一福利导航,福利,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,你懂的资源,宅男网站大全,手机酷站,找福利,一键好去处">
+<meta name="keywords" content="福利导航,蓝色福利导航,蓝色导航,蓝色小导航,福导航,蓝福利导航,第一福利导航,福利,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,福利资源,宅男网站大全,手机酷站,找福利,一键好去处">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
@@ -51,7 +51,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.beett.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://lady.cf/" target="_blank">福利资源</a></li>
+<li><a href="http://lady.cf/" target="_blank">精品福利</a></li>
 <li><a href="http://papa60.com/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
