--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 <li><a href="http://174.127.195.195/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
-<li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP论坛</a></li>
 <li><a href="http://www.henhenlu999.xyz/" target="_blank">狠狠撸第二站</a></li>
 <li><a href="http://www.xinghao.ml/?fromuid=18" target="_blank">性好论坛</a></li>
@@ -150,8 +149,8 @@
 <li><a href="http://taohuabt.org/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cc.umpb.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://xbxbxb.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://cc.umyp.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://m.ocoaoo.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cc.ufgn.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
+<li><a href="http://cc.uhen.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cc.ukmz.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://cc.uqsk.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
