--- a/link.html
+++ b/link.html
@@ -5,7 +5,7 @@
 <title>新站提交</title>
 <meta name="Description" content="蓝色小导航,打造完全绿色无毒无广告,收录全面更新及时的福利导航." />
 <meta name="keywords" content="福利导航,蓝色福利导航,蓝色导航,蓝色小导航,福导航,蓝福利导航,第一福利导航,福利,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,福利资源,宅男网站大全,手机酷站,找福利,一键好去处">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body> 
