--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>蓝色小导航-福利导航-蓝色导航</title>
 <meta name="Description" content="蓝色小导航,打造完全绿色无毒无广告,收录全面更新及时的福利导航." />
 <meta name="keywords" content="福利导航,蓝色福利导航,蓝色导航,蓝色小导航,福导航,蓝福利导航,第一福利导航,福利,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,福利资源,宅男网站大全,手机酷站,找福利,一键好去处">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
 <body>
@@ -242,11 +242,12 @@
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
-<li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
-<li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
+<li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
+<li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
+<li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
