--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
 <li><a href="http://www.yidianpai.com/" target="_blank">一点拍导航</a></li>
 <li><a href="http://www.muguadaohang.com/" target="_blank">木瓜导航</a></li>
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
+<li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
 <li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
@@ -245,6 +246,7 @@
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
+<li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
 <li><a href="http://www.yyj78.com/" target="_blank">涩涩爱</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
@@ -583,7 +585,7 @@
 <li><a href="http://www.wg438.com/" target="_blank">超碰论坛</a></li>
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
-<li><a href="http://www.yuliyazhu.com/" target="_blank">宅男福利社</a></li>
+<li><a href="http://www.0304.me/" target="_blank">小陆资源网</a></li>
 <li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
