--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
 <li><a href="http://www.ppzy8.com/" target="_blank">啪啪资源吧</a></li>
 <li><a href="http://www.465ip.com/" target="_blank">大香蕉</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="http://www.70b1.com/?fromuid=16580" target="_blank">麒麟臂论坛</a></li>
 <li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://107.180.71.83/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
 <li><a href="http://www.papapa88.com/?fromuid=123" target="_blank">啪啪啪88</a></li>
+<li><a href="http://www.70b5.com/?fromuid=16580" target="_blank">麒麟臂论坛</a></li>
+<li><a href="http://cfukt.xyz/" target="_blank">CFUKT</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://18board.com/forum/" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
@@ -262,7 +263,7 @@
 <li><a href="http://www.ziyetvv.com/" target="_blank">紫夜AV电影</a></li>
 <li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
-<li><a href="http://www.fulisuola.top/" target="_blank">福利所电影</a></li>
+<li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
 <li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
@@ -299,9 +300,6 @@
 <li><a href="http://avlu.biz/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
-<li><a href="http://www.91sheav.win/" target="_blank">就要射AV</a></li>
-<li><a href="http://www.92sheav.win/" target="_blank">就爱射AV</a></li>
-<li><a href="http://www.912hh.vip/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.cpzx1.pw/" target="_blank">超碰视频</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
@@ -541,7 +539,7 @@
 		<strong><a name="/9/">信息交友</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://iywzd.me/s/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="http://ywzd1.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.fou3.com/" target="_blank">爬花楼</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
