--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-<li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li> 
-<li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
+<li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
+<li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
-<li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
+<li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
 <li><a href="http://www.78links.com/" target="_blank">78导航</a></li>
@@ -241,11 +241,11 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://www.dushewang.top/" target="_blank">毒蛇AV影院</a></li>
-<li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
-<li><a href="http://87big.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.tg106.com/" target="_blank">色妹妹视频</a></li>
 <li><a href="http://www.youzzjj.xyz/" target="_blank">优优在线AV</a></li>
 <li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
+<li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
+<li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
@@ -279,6 +279,7 @@
 <li><a href="http://www.3pfun.ga/" target="_blank">3pfun</a></li>
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
 <li><a href="http://cao78.xyz/" target="_blank">操jb视频</a></li>
+<li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
@@ -812,7 +813,6 @@
 		<div class="linkl">
 		<ul>
 <li><a href="https://btso.pw/search" target="_blank">BTSOW种子</a></li>
-<li><a href="http://clshe.com/" target="_blank">磁力社</a></li>
 <li><a href="http://www.2016bt.cc/" target="_blank">2016BT核工厂</a></li>
 <li><a href="http://btkitty.bid/" target="_blank">BT KITTY</a></li>
 <li><a href="https://www.nyaa.se/" target="_blank">Nyaa</a></li>
@@ -838,12 +838,13 @@
 <li><a href="http://www.naughtyblog.org/" target="_blank">nahghtyblog</a></li>
 <li><a href="http://www.torrentfunk.com/" target="_blank">TorrentFunk</a></li>
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
+<li><a href="http://www.cilibaba.org/" target="_blank">CiLiBaBa</a></li>
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
 <li><a href="http://torrent.sex169.biz/" target="_blank">SEX169 種子站</a></li>
 <li><a href="http://www.btse69.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
-<li><a href="http://www.cilibaba.org/" target="_blank">CiLiBaBa</a></li>
+<li><a href="http://clshe.com/" target="_blank">磁力社</a></li>
 <li><a href="http://www.ciliwo.com/" target="_blank">磁力窝</a></li>
 <li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
 <li><a href="http://www.cilihome.com/" target="_blank">磁力之家</a></li>
