--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
-<li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
 <li><a href="http://www.78links.com/" target="_blank">78导航</a></li>
@@ -182,6 +181,7 @@
 <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
 <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">辣椒导航</a></li>
+<li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
@@ -230,6 +230,7 @@
 <li><a href="http://www.sebadh.com/" target="_blank">色吧福利导航</a></li>
 <li><a href="http://www.99redao.top/" target="_blank">99热导航</a></li>
 <li><a href="http://www.lvsefldh.com/" target="_blank">绿色福利导航</a></li>
+<li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
 		</div>
@@ -280,6 +281,7 @@
 <li><a href="http://ziyule.xyz/" target="_blank">自娱乐</a></li>
 <li><a href="http://cao78.xyz/" target="_blank">操jb视频</a></li>
 <li><a href="http://www.gogo199.com/" target="_blank">妓出阁</a></li>
+<li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
 <li><a href="http://huojianp1.pw/" target="_blank">火箭视频</a></li>
 <li><a href="http://www.sesexia.com/" target="_blank">超快色色下</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
