--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
 <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
+<li><a href="http://www.1080dh.com/" target="_blank">1080导航</a></li>
 <li><a href="http://www.bagunian.info/" target="_blank">八姑娘导航</a></li>
 <li><a href="http://www.78links.com/" target="_blank">78导航</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
@@ -247,6 +248,10 @@
 <li><a href="http://www.smmzx.xyz/" target="_blank">色妹妹影院</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
+<li><a href="http://www.hongfanqu.info/" target="_blank">红番区</a></li>
+<li><a href="http://www.qingsp.info/" target="_blank">青视频</a></li>
+<li><a href="http://www.seqren.info/" target="_blank">色情人视频</a></li>
+<li><a href="http://www.51mmm.info/" target="_blank">51妹妹在线</a></li>
 <li><a href="http://www.chushui69.com/" target="_blank">初水视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://cb106.com/" target="_blank">青草视频</a></li>
