--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
-<li><a href="http://taohuabt.org/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://taohuabbs.info/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cc.umpb.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://cc.umyp.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://cc.ufgn.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
@@ -186,6 +186,7 @@
 <li><a href="http://www.99fldh.com/" target="_blank">99福利导航</a></li>
 <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
 <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
+<li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
 <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
@@ -270,13 +271,14 @@
 <li><a href="http://www.repiantv.top/" target="_blank">热片大电影</a></li>
 <li><a href="http://www.langziav.top/" target="_blank">浪子AV电影</a></li>
 <li><a href="http://www.fulisuola.top/" target="_blank">福利电影</a></li>
+<li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
 <li><a href="http://www.909xf.com/" target="_blank">蚂蚁视频</a></li>
 <li><a href="http://www.51lulu.info/" target="_blank">51撸撸</a></li>
 <li><a href="http://www.caoiii.net/" target="_blank">超爱视频</a></li>
 <li><a href="http://www.yaocao888.com/" target="_blank">要操吧</a></li>
 <li><a href="http://laoshiji3758.com/" target="_blank">天天爱视频</a></li>
 <li><a href="http://www.rr1919.com/" target="_blank">丁香五月</a></li>
-<li><a href="http://www.haokan666.top/" target="_blank">好看AV站</a></li>
+<li><a href="http://www.kedou69.info/" target="_blank">蝌蚪娱乐</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -404,6 +406,7 @@
 <li><a href="https://www.tnaflix.com/" target="_blank">TNAFlix</a></li>
 <li><a href="http://www.keezmovies.com/" target="_blank">keezm</a></li>
 <li><a href="http://www.hd21.com/" target="_blank">Hd21</a></li>
+<li><a href="http://instantfap.com/" target="_blank">InstantFap</a></li>
 <li><a href="http://www.longsextube.net/" target="_blank">Longsex</a></li>
 <li><a href="http://www.kuntfutube.com/" target="_blank">KuntFu Tube</a></li>
 <li><a href="http://www.pornomovies.com/" target="_blank">PornoMovies</a></li>
@@ -438,7 +441,6 @@
 <li><a href="http://sexvidx.tv/" target="_blank">SexvidX</a></li>
 <li><a href="http://www.hdmovz.com/" target="_blank">HDMOVZ</a></li>
 <li><a href="http://hdhardporn.com/" target="_blank">HD Hard Porn</a></li>
-<li><a href="http://sextubeporn.net/" target="_blank">SexTubePorn</a></li>
 <li><a href="http://www.sozrel.xxx/" target="_blank">Sozrel</a></li>
 <li><a href="http://www.porno23.com/" target="_blank">Porno23</a></li>
 <li><a href="http://lentaporno.com/" target="_blank">LentaPorno</a></li>
@@ -592,6 +594,7 @@
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
 <li><a href="http://www.0304.me/" target="_blank">小陆资源网</a></li>
+<li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="http://zhainw.com/" target="_blank">宅男网</a></li>
 <li><a href="http://meirifuli.me/" target="_blank">每日福利</a></li>
 <li><a href="https://www.sijihuisuo.club/" target="_blank">司机会所</a></li>
@@ -736,11 +739,11 @@
 		<ul>
 <li><a href="http://lsjtupian.com/" target="_blank">老司机图片</a></li>
 <li><a href="http://www.caoliufan.com/" target="_blank">潮榴番</a></li>
-<li><a href="http://www.3515.pw/" target="_blank">爱心社</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://www.meinvtu.info/" target="_blank">美女图福利</a></li>
 <li><a href="http://www.ixieegif.com/" target="_blank">G爱F出处网</a></li>
+<li><a href="http://www.jiepai77.com/" target="_blank">街拍77网</a></li>
 <li><a href="http://91.t9m.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
